--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="list1">Home</li>
             <li class="list2">Shop</li>
             <li class="list2">About us</li>
-            <div class="div-number1"><li><span class="material-symbols-outlined">shopping_cart</span></li>
+            <div class="div-number1"><li><span class="material-symbols-outlined"></span></li>
             <li class="list3">Cart ($56)</li></div>
            </ul>
         </nav>
