--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <li class="list1">Home</li>
             <li class="list2">Shop</li>
             <li class="list2">About us</li>
-            <div class="div-number1"><li><span class="material-symbols-outlined"></span></li>
+            <div class="div-number1"><li><span class="material-symbols-outlined"><i class="bi bi-cart2"></i></span></li>
             <li class="list3">Cart ($56)</li></div>
            </ul>
         </nav>
         <!-- banner -->
         <banner class="banner">
             <div class="banner-div-1 noto-serif">
-                <h1 classs="banner-heading  noto-serif">ALWAYS <span class="fresh">FRESH <br> FLOWERS</span></h1>
+                <h1 classs="banner-heading noto-serif">ALWAYS <span class="fresh">FRESH <br> FLOWERS</span></h1>
             <p class="banner-paragraph inter-uniquifier">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div class="banner-img"><img class="hero" src="assets/hero-flower.png" alt=""></div>
